Restructure api spec, post json request instead of using query params for get Data operations
