# src/main/java/projects/sensor/api/util/TimeUtil.java
@@ -1,13 +1,13 @@
 package projects.sensor.api.util;
 
-import io.vertx.ext.web.validation.RequestParameter;
+import io.vertx.core.json.JsonObject;
 
 import java.text.SimpleDateFormat;
 import java.util.Calendar;
 
 public class TimeUtil {
     
-    public static String getDateTimeString(RequestParameter year, RequestParameter month, RequestParameter date, RequestParameter hour) {
+    public static String getDateTimeString(String year, String month, String date, String hour) {
         StringBuilder dateTimeString = new StringBuilder();
         dateTimeString.append(year);
         dateTimeString.append("-");
@@ -22,26 +22,29 @@ public class TimeUtil {
         return dateTimeString.toString();
     }
 
-    public static String getDateTimeString(RequestParameter year, RequestParameter month, RequestParameter date) {
-        return getDateTimeString(year, month, date, null);
+    public static String getDateTimeString(JsonObject jsonObject) {
+        return getDateTimeString(jsonObject.getString("year"), jsonObject.getString("month"), 
+                jsonObject.getString("date"), jsonObject.getString("hour"));
     }
 
-    public static String getDateTimeStringNextInterval(RequestParameter year, RequestParameter month, RequestParameter date, RequestParameter hour) {
-        if (hour != null) {
-            return getDateTimeStringPlusHours(year, month, date, hour, 1);
+    public static String getDateTimeStringNextInterval(JsonObject jsonObject) {
+        if (jsonObject.getString("hour") != null) {
+            return getDateTimeStringPlusHours(jsonObject.getString("year"), jsonObject.getString("month"),
+                    jsonObject.getString("date"), jsonObject.getString("hour"), 1);
         } else {
-            return getDateTimeStringPlusDates(year, month, date, 1);
+            return getDateTimeStringPlusDates(jsonObject.getString("year"), jsonObject.getString("month"),
+                    jsonObject.getString("date"), 1);
         }
     }
 
-    public static String getDateTimeStringPlusDates(RequestParameter year, RequestParameter month, RequestParameter date, int n) {
+    public static String getDateTimeStringPlusDates(String year, String month, String date, int n) {
         Calendar calendar = Calendar.getInstance();
         calendar.set(Integer.valueOf(year.toString()), Integer.valueOf(month.toString()) -1 , Integer.valueOf(date.toString()), 0, 0, 0);
         calendar.add(Calendar.DATE, n);
         return new SimpleDateFormat("y-MM-dd").format(calendar.getTime());
     }
 
-    public static String getDateTimeStringPlusHours(RequestParameter year, RequestParameter month, RequestParameter date, RequestParameter hour, int n) {
+    public static String getDateTimeStringPlusHours(String year, String month, String date, String hour, int n) {
         Calendar calendar = Calendar.getInstance();
         calendar.set(Integer.valueOf(year.toString()), Integer.valueOf(month.toString()) - 1, Integer.valueOf(date.toString()), Integer.valueOf(hour.toString()), 0, 0);
         calendar.add(Calendar.HOUR_OF_DAY, n);
